wdl-analysis/tests/validation/requirements-unsupported.errors
error: use of the `requirements` section requires WDL version 1.2
  ┌─ tests/validation/requirements-unsupported:6:5
  │
6 │     requirements {
  │     ^^^^^^^^^^^^

